# upload-svc

./: .gitignore  README.md  large-file.json
benchmarks/: Dockerfile  docker-compose.benchmark.yml  requirements.txt
benchmarks/data/: generate_test_data.py
benchmarks/scripts/: analyze_results.py  load_test.py  run_benchmarks.sh
svc-go/: .gitignore  README.md  go.mod  upload.sh
svc-go/cmd/server/: main.go
svc-go/internal/config/: config.go
svc-go/internal/handler/: handler.go
svc-go/internal/logger/: logger.go
svc-go/internal/service/: BENCH_NOTES.md  file_processor.go  file_processor_test.go
svc-go/pkg/models/: models.go
svc-python/: README.md  main.py  pyproject.toml  test_server.py
svc-python/src/service_upload/: main.py
svc-python/src/service_upload/api/: routes.py
svc-python/src/service_upload/core/: config.py  file_processor.py
svc-python/tests/: test_file_processor.py  test_performance.py  test_routes.py
svc-rust/: .gitignore  Cargo.toml  generate_test_data.py  performance_results.json  performance_results.md  perftest.sh  server_log.txt  system_resources.txt  upload.sh
svc-rust/examples/: Cargo.toml  high_performance_json_stream.rs  json_stream_parsing.rs
svc-rust/src/: config.rs  main.rs  types.rs
svc-rust/src/handlers/: mod.rs  processing.rs  upload.rs
svc-rust/src/utils/: file_processing.rs  json_processing.rs  mod.rs
