[tool.poetry]
name = "svc-upload"
version = "0.1.0"
description = ""
authors = ["Janos Hardi <janos-karoly.hardi@telekom.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
aiofiles = "^24.1.0"
orjson = "^3.10.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
