[tool.poetry]
name = "service-upload"
version = "0.1.0"
description = "High-performance file upload and processing service"
authors = ["Janos Hardi <janos-karoly.hardi@telekom.com>"]
readme = "README.md"
packages = [{include = "service_upload", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
aiofiles = "^24.1.0"
orjson = "^3.10.12"
uvicorn = "^0.29.0"  # High-performance ASGI server
httpx = "^0.27.0"   # Async HTTP client for potential future integrations

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
locust = "^2.25.1"  # Performance testing
memory-profiler = "^0.61.0"  # Memory usage profiling

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn service_upload.main:app --host 0.0.0.0 --port 8000 --workers 4"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["src/service_upload"]
