[package]
name = "svc-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-multipart = "0.4.0"
actix-web = "4.9.0"
bytes = "1.6.0"
env_logger = "0.11.5"
futures = "0.3.31"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tracing = "0.1.41"
tracing-actix-web = "0.7.15"
zip = "2.2.1"
