[[bin]]
name = "json-stream-parsing"
path = "json_stream_parsing.rs"

[[bin]]
name = "high-performance-json-stream"
path = "high_performance_json_stream.rs"

[package]
name = "json-stream-parsing-example"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
